creación de los switches, radios y checked

--- a/src/app/template/dinamicos/dinamicos.component.html
+++ b/src/app/template/dinamicos/dinamicos.component.html
@@ -24,8 +24,8 @@
         <label class="col-sm-3 col-form-label">Agregar</label>
         <div class="col-sm-9">
             <div class="input-group">
-                <input class="form-control" placeholder="Agregar favorito">
-                <button class="btn btn-outline-primary" type="button">Agregar</button>
+                <input class="form-control" placeholder="Agregar favorito" [(ngModel)] = nuevoJuego name="nuevoJuego" (keyup.enter)="agregarJuego()">
+                <button class="btn btn-outline-primary" type="button" (click)="agregarJuego()" >Agregar</button>
             </div>
         </div>
     </div>
@@ -34,10 +34,15 @@
      <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Favoritos</label>
         <div class="col-sm-9">
-            <input *ngFor="let juego of persona.favoritos; let i = index"
-                    [(ngModel)]="juego.nombre"
-                    name="favorito_{{i}}"
-                    class="form-control mb-1">
+            <div class="input-group mb-1"
+            *ngFor="let juego of persona.favoritos; let i = index">
+                <input 
+                        [(ngModel)]="juego.nombre"
+                        name="favorito_{{i}}"
+                        class="form-control">
+                        <button class="btn btn-outline-danger" type="button" (click)="eliminar(i)">Eliminar</button>
+                
+            </div>
         </div>
     </div>
 
