--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,87 @@
-<p>switches works!</p>
+<h2>Reactivos: Switches</h2>
+<hr>
+
+<form>
+
+    <!--Radio-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Genero</label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input"
+                        type="radio"
+                        value="M"
+                        name="radioGenero" 
+                        id="radioMasculino">
+                <label class="form-check-label" for="radioMasculino">
+                    Masculino
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input"
+                        type="radio"
+                        value="F"
+                        name="radioGenero" 
+                        id="radioFemenino">
+                <label class="form-check-label" for="radioFemenino">
+                    Femenino
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!--Switches-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Notificaciones</label>
+        <div class="col-sm-9">
+            <div class="form-check form-switch">
+                <input class="form-check-input" 
+                        type="checkbox"
+                        id="flexSwitchCheckChecked">
+                <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+            </div>
+        </div>
+    </div>
+
+
+    <!--Checked-->
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label"></label>
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                         type="checkbox"
+                         id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                    Terminos y condiciones de uso
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!--Boton-->
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary float-end" >Guardar</button>
+        </div>
+    </div>
+</form>
+
+
+<!-- <h5>Valor del formulario</h5>
+<pre>{{miFormulario.value | json}}</pre>
+<br>
+
+<h5>Persona</h5>
+<pre>{{persona | json}}</pre>
+<br>
+
+<h5>valid</h5>
+<pre>{{miFormulario.valid}}</pre>
+<br>
+
+<h5>Términos</h5>
+<pre>{{miFormulario.controls['terminos']?.errors | json }}</pre>
+<br>
+
+<pre>Condiciones: </pre> -->
