Creacion del reactive dinamico

--- a/src/app/reactive/basicos/basicos.component.html
+++ b/src/app/reactive/basicos/basicos.component.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col">
-        <form autocomplete="off" [formGroup]="miFormulario" >
+        <form  (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miFormulario" >
             <!--Campo del producto-->
             <div class="mb-3 row">
                 <label class="col-sm-3 col-form-label">Producto</label>
@@ -13,7 +13,8 @@
                             formControlName="nombre"  
                             placeholder="Nombre del producto">
 
-                    <span  class="form-text text-danger">
+                    <span  class="form-text text-danger"
+                            *ngIf="campoNoValido('nombre')">
                         Debe tener minimo 3 letras
                     </span>
                 </div>
@@ -23,8 +24,12 @@
             <div class="mb-3 row">
                 <label class="col-sm-3 col-form-label">Precio</label>
                 <div class="col-sm-9">
-                    <input type="number" class="form-control"  placeholder="Precio del producto">
-                        <span class="form-text text-danger">
+                    <input  type="number"
+                            formControlName="precio" 
+                            class="form-control"  
+                            placeholder="Precio del producto">
+                        <span class="form-text text-danger"
+                        *ngIf="campoNoValido('precio')">
                             El precio debe ser superior a 0
                         </span>
                 </div>
@@ -37,13 +42,18 @@
                 <div class="col-sm-9">
                     <input  type="number" 
                             class="form-control" 
+                            formControlName="existencias"
                             placeholder="Existencias del producto">
+                            <span class="form-text text-danger"
+                        *ngIf="campoNoValido('existencias')">
+                            El existencias debe ser superior a 0
+                        </span>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col">
-                    <button type="submit" class="btn btn-primary float-end" >
+                    <button type="submit" class="btn btn-primary float-end"  >
                         Guardar
                     </button>
                 </div>
