--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,13 +1,17 @@
 <h2>Reactivos: <small>Dinamicos</small></h2>
 <hr>
 
-<form autocomplete="off">
+<form  (ngSubmit)="guardar()" autocomplete="off" [formGroup]="miFormulario">
     <!--Nombre-->
     <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Nombre</label>
         <div class="col-sm-9">
-            <input class="form-control" placeholder="Nombre de la persona">
-            <span class="form-text text-danger">
+            <input  type="text"
+                    class="form-control"
+                    formControlName="nombre"
+                    placeholder="Nombre de la persona">
+            <span class="form-text text-danger"
+                *ngIf="campoNoValido('nombre')">
                 Este campo es obligatorio
             </span>
         </div>
@@ -40,7 +44,7 @@
 
     <div class="row">
         <div class="col-sm-12">
-            <button type="button" class="btn btn-primary float-end">
+            <button type="button" class="btn btn-primary float-end" (click)="guardar()">
                 Guardar
             </button>
         </div>
