Creación del FormArray,  creacion de los controles del FormArray, implementación de la funcion agregar y borrar un juego favorito

--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -22,9 +22,12 @@
         <label class="col-sm-3 col-form-label">Agregar</label>
         <div class="col-sm-9">
             <div class="input-group">
-                <input class="form-control" placeholder="Agregar favorito">
-                <!--(keyup.enter)="a=1"-->
-                <button class="btn btn-outline-primary" type="button">Agregar</button>
+                <input class="form-control" 
+                [formControl]="nuevoFavorito"
+                placeholder="Agregar favorito"
+                (keyup.enter)="agregarFavorito()">
+                
+                <button class="btn btn-outline-primary" type="button" (click)="agregarFavorito()" >Agregar</button>
             </div>
         </div>
     </div>
@@ -32,12 +35,14 @@
     <!--Agregar Lista de juegos favoritos-->
     <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Favoritos</label>
-        <div class="col-sm-9">
-            <!-- <div class="input-group mb-1" *ngFor="let juego of persona.favoritos; let i = index">
-                <input class="form-control">
-                <button class="btn btn-outline-danger" type="button">Eliminar</button>
+        <div class="col-sm-9"  formArrayName="favoritos">
+            <div class="input-group mb-1" 
+                *ngFor="let favorito of favoritosArr.controls; let i = index">
+                <input class="form-control"
+                [formControlName]="i">
+                <button class="btn btn-outline-danger" type="button"  (click)="borrar(i)">Eliminar</button>
 
-            </div> -->
+            </div>
         </div>
     </div>
 
@@ -51,5 +56,18 @@
     </div>
 </form>
 
-<!-- <span>Persona</span>
-<pre>{{ persona | json }}</pre> -->
+
+<span>Valid</span>
+<pre>{{ miFormulario.valid }}</pre>
+<br>
+
+
+<span>Value</span>
+<pre>{{ miFormulario.value | json}}</pre>
+<br>
+
+
+<span>Agregar Juego</span>
+<pre>{{ nuevoFavorito.valid}}</pre>
+<pre>{{ nuevoFavorito.value}}</pre>
+<br>
