--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,7 +1,7 @@
 <h2>Reactivos: Switches</h2>
 <hr>
 
-<form>
+<form  [formGroup]="miFormulario"  (ngSubmit)="guardar()">
 
     <!--Radio-->
     <div class="row mb-3">
@@ -11,7 +11,7 @@
                 <input class="form-check-input"
                         type="radio"
                         value="M"
-                        name="radioGenero" 
+                        formControlName="genero" 
                         id="radioMasculino">
                 <label class="form-check-label" for="radioMasculino">
                     Masculino
@@ -21,7 +21,7 @@
                 <input class="form-check-input"
                         type="radio"
                         value="F"
-                        name="radioGenero" 
+                        formControlName="genero"
                         id="radioFemenino">
                 <label class="form-check-label" for="radioFemenino">
                     Femenino
@@ -37,6 +37,7 @@
             <div class="form-check form-switch">
                 <input class="form-check-input" 
                         type="checkbox"
+                        formControlName="notificaciones"
                         id="flexSwitchCheckChecked">
                 <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
             </div>
@@ -51,6 +52,7 @@
             <div class="form-check">
                 <input class="form-check-input" 
                          type="checkbox"
+                         formControlName="condiciones"
                          id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
                     Terminos y condiciones de uso
@@ -62,13 +64,13 @@
     <!--Boton-->
     <div class="row">
         <div class="col">
-            <button class="btn btn-primary float-end" >Guardar</button>
+            <button class="btn btn-primary float-end" type="submit" >Guardar</button>
         </div>
     </div>
 </form>
 
 
-<!-- <h5>Valor del formulario</h5>
+<h5>Valor del formulario</h5>
 <pre>{{miFormulario.value | json}}</pre>
 <br>
 
@@ -81,7 +83,7 @@
 <br>
 
 <h5>Términos</h5>
-<pre>{{miFormulario.controls['terminos']?.errors | json }}</pre>
+<!-- <pre>{{miFormulario.controls['terminos']?.errors | json }}</pre> -->
 <br>
 
-<pre>Condiciones: </pre> -->
+<!-- <pre>Condiciones: </pre> -->
