--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -22,3 +22,15 @@
         {{item.texto}}
     </li>
 </ul>
+
+<h1 class="mt-3">Validaciones</h1>
+<hr>
+
+<ul class="list-group">
+    <li *ngFor="let item of authMenu"
+        class="list-group-item" 
+        [routerLink]="[item.ruta]"
+        routerLinkActive="active">
+        {{item.texto}}
+    </li>
+</ul>
