--- a/src/app/auth/pages/registro/registro.component.html
+++ b/src/app/auth/pages/registro/registro.component.html
@@ -1,1 +1,107 @@
-<p>registro works!</p>
+<h2>Validaciones Reactivas</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <form   autocomplete="off" 
+                [formGroup]="miFormulario"
+                (ngSubmit)="submitFormulario()">
+
+            <!--Nombre-->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Nombre</label>
+                <div class="col-sm-9">
+                    <input  type="text"
+                            class="form-control"
+                            formControlName="nombre"
+                            placeholder="Nombre del usuario">
+                    <span class="form-text text-danger" 
+                          *ngIf="campoValido('nombre')">Debe de ser en formato de nombre y apellido</span>
+                </div>
+            </div>
+
+            <!--Email-->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Email</label>
+                <div class="col-sm-9">
+                    <input  type="email"
+                            class="form-control"
+                            formControlName="email"
+                            placeholder="Email del usuario">
+                    <span class="form-text text-danger" 
+                        *ngIf="campoValido('email')">El correo es obligatorio</span>
+                </div>
+            </div>
+
+            <!--Username-->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Username</label>
+                <div class="col-sm-9">
+                    <input  type="text"
+                            class="form-control"
+                            formControlName="username"
+                            placeholder="Nombre código del usuario">
+                    <span class="form-text text-danger" 
+                            *ngIf="campoValido('username')">El username no puede ser strider</span>
+                </div>
+            </div>
+
+            <!--Password-->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Password</label>
+                <div class="col-sm-9">
+                    <input  type="password"
+                            class="form-control"
+                            formControlName="password"
+                            placeholder="Password de su cuenta">
+
+                    <span class="form-text text-danger" 
+                        *ngIf="campoValido('password')">El password debe contener minimo 6 caracteres</span>
+                </div>
+            </div>
+
+            <!--Password2-->
+            <div class="row mb-3">
+                <label class="col-sm-3 col-form-label">Password</label>
+                <div class="col-sm-9">
+                    <input  type="password"
+                            class="form-control"
+                            formControlName="password2"
+                            placeholder="Confirmar el password">
+
+                    <span class="form-text text-danger" 
+                        *ngIf="campoValido('password2')">las constraseñas deben ser iguales</span>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <button class="btn btn-primary float-end"
+                            type="submit">
+                        Guardar
+                    </button>
+                </div>
+            </div>
+
+        </form>
+    </div>
+</div>
+
+<h2>Form Valid: {{ miFormulario.valid }}</h2>
+<h2>Form Errors</h2>
+<pre>{{ miFormulario.errors | json }}</pre>
+
+<h2>Nombre</h2>
+<pre>{{ miFormulario.controls['nombre'].errors | json }}</pre>
+
+<h2>Email</h2>
+<pre>{{ miFormulario.controls['email'].errors | json }}</pre>
+
+<h2>Username</h2>
+<pre>{{ miFormulario.controls['username'].errors | json }}</pre>
+
+<h2>password</h2>
+<pre>{{ miFormulario.controls['password'].errors | json }}</pre>
+
+<h2>Confirmación password</h2>
+<pre>{{ miFormulario.controls['password2'].errors | json }}</pre>
